--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/TPInjector.xcworkspace -scheme TPInjector-Example -sdk macosx10.13 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/TPCoreUtils.xcworkspace -scheme TPCoreUtils-Example -sdk macosx10.13 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
